--- a/Views/Cars/Index.cshtml
+++ b/Views/Cars/Index.cshtml
@@ -85,3 +85,31 @@
         </tbody>
     </table>
 </div>
+
+<div class="pagination">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            @{
+                var currentPage = (ViewData["Page"] as int?) ?? 1;
+                var totalPages = Math.Ceiling((double)(ViewData["TotalCount"] as int?) / 10); // Total pages calculated based on total count and 10 cars per page
+            }
+
+            @if (currentPage > 1)
+            {
+                <li class="page-item"><a class="page-link" href="?SortBy=@SortBy&page=1">First</a></li>
+                <li class="page-item"><a class="page-link" href="?SortBy=@SortBy&page=@(currentPage - 1)">Previous</a></li>
+            }
+
+            @for (int i = 1; i <= totalPages; i++)
+            {
+                <li class="page-item @(currentPage == i ? "active" : "")"><a class="page-link" href="?SortBy=@SortBy&page=@i">@i</a></li>
+            }
+
+            @if (currentPage < totalPages)
+            {
+                <li class="page-item"><a class="page-link" href="?SortBy=@SortBy&page=@(currentPage + 1)">Next</a></li>
+                <li class="page-item"><a class="page-link" href="?SortBy=@SortBy&page=@totalPages">Last</a></li>
+            }
+        </ul>
+    </nav>
+</div>
