--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Search</h1>
 
-    <form asp-action="SearchResults">
+    <form asp-controller="Cars" asp-action="SearchResults" method="get">
         <div class="form-group">
             <label for="minPrice" class="control-label">Minimum Price</label>
             <input name="minPrice" class="form-control" value="0" />
@@ -26,8 +26,8 @@
             <input name="chargeTime" class="form-control" value="" />
         </div>
         <div class="form-group">
-            <label for="sortBy" class="control-label">Sort By</label>
-            <select name="sortBy" class="form-control">
+            <label for="SortBy" class="control-label">Sort By</label>
+            <select name="SortBy" class="form-control">
                 <option value="0">Default</option>
                 <option value="1">Maker</option>
                 <option value="2">Model</option>
