--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -33,6 +33,7 @@
                 <option value="2">Model</option>
                 <option value="3">Price: Low to High</option>
                 <option value="4">Price: High to Low</option>
+                <option value="5">Charge Time</option>
             </select>
         </div>
         <div class="form-group" style="margin-top:10px">
