--- a/Views/Cars/Index.cshtml
+++ b/Views/Cars/Index.cshtml
@@ -9,12 +9,16 @@
 
 <p>
     Sort by:
-    <a asp-action="Index" asp-route-SortBy="1">Maker</a> |
-    <a asp-action="Index" asp-route-SortBy="2">Model</a> |
-    <a asp-action="Index" asp-route-SortBy="3">Price: Low to High</a> |
-    <a asp-action="Index" asp-route-SortBy="4">Price: High to Low</a> |
-    <a asp-action="Index" asp-route-SortBy="5">Charge Time</a>
+    <select id="sortSelector">
+        <option value="0">Select One</option>
+        <option value="1">Maker</option>
+        <option value="2">Model</option>
+        <option value="3">Price: Low to High</option>
+        <option value="4">Price: High to Low</option>
+        <option value="5">Charge Time</option>
+    </select>
 </p>
+
 
 <div class="table-responsive">
     <table class="table">
@@ -73,7 +77,7 @@
                         @Html.DisplayFor(modelItem => item.Range) miles
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.NormalChargeTime)
+                        @Html.DisplayFor(modelItem => item.NormalChargeTime) minutes
                     </td>
                     <td>
                         £@Html.DisplayFor(modelItem => item.FullPrice)
@@ -92,7 +96,8 @@
         <ul class="pagination">
             @{
                 var currentPage = (ViewData["Page"] as int?) ?? 1;
-                var totalPages = Math.Ceiling((double)(ViewData["TotalCount"] as int?) / 10); // Total pages calculated based on total count and 10 cars per page
+                var totalCount = ViewData["TotalCount"] as int? ?? 0;
+                var totalPages = Math.Ceiling((double)totalCount / 10);
             }
 
             @if (currentPage > 1)
