--- a/Views/Cars/SelectCompare.cshtml
+++ b/Views/Cars/SelectCompare.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<EVComparisons.Models.Cars>
+@{
+    ViewData["Title"] = "Compare";
+}
 <h4>Compare Cars</h4>
 <hr />
 <div class="row">
