--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -18,6 +18,10 @@
             <input name="maker" class="form-control" value=""/>
         </div>
         <div class="form-group">
+            <label for="model" class="control-label">Model</label>
+            <input name="model" class="form-control" value="" />
+        </div>
+        <div class="form-group">
             <label for="range" class="control-label">Range</label>
             <input name="range" class="form-control" value=""/>
         </div>
